--- a/src/app/feature-models/books/components/book/book.component.scss
+++ b/src/app/feature-models/books/components/book/book.component.scss
@@ -2,22 +2,16 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    width: 300px;
+    justify-content: space-between;
     align-items: center;
-    outline: 1px solid gray;
-    width: 150px;
-    padding: 5px;
-    margin: 5px;
-    justify-content: center;
     text-align: center;
-    flex: 1;
-
-}
-
-.book_title{
-    display: flex;
-    flex-wrap: wrap;
+    height: 100%;
+    text-shadow: 0 5px 5px rgb(0 0 0 / 10%);
+    cursor: pointer;
 }
 
 img{
-    height: 100px;
+    height: 250px;
+    width: 200px;
 }
