--- a/src/app/feature-models/books/components/books-list/books-list.component.scss
+++ b/src/app/feature-models/books/components/books-list/books-list.component.scss
@@ -1,7 +1,7 @@
 .books_body{
     display: flex;
-    flex: row;
     flex-wrap: wrap;
     height: 100%;
     justify-content: center;
+    gap:50px;
 }
