added BookModel, Routing, new Book Module

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav>
   <div class="nav nav_body">
     <div class="nav_left">
-      <i class="fa-solid fa fa-book book_icon"></i>
+      <a routerLink="/books">
+        <i class="fa-solid fa fa-book book_icon"></i>
+      </a>
     </div>
     <div class="nav nav_search_bar">
       <span>
