--- a/src/app/feature-models/books/components/book-details/book-details.component.html
+++ b/src/app/feature-models/books/components/book-details/book-details.component.html
@@ -1,1 +1,14 @@
-<p>book-details works!</p>
+<div class="book">
+    <div class="book_image">
+        test
+    </div>
+    <div class="book_details">
+        test
+    </div>
+    <div class="book_action_buttons">
+        test
+    </div>
+    <div class="book_description">
+        test
+    </div>
+</div>
