--- a/src/app/feature-models/books/components/book-form/book-form.component.html
+++ b/src/app/feature-models/books/components/book-form/book-form.component.html
@@ -57,8 +57,10 @@
       </div>
     </div>
     <hr>
-
-    <button type="button" class="btn btn-secondary" [disabled]="!isFormValid()">Add Book</button>
-    <button type="button" class="btn btn-primary" [disabled]="!isFormValid()">Edit Book</button>
+    <div class="modal_footer">
+      <button type="button" class="btn btn-secondary" [disabled]="!isFormValid()">Add Book</button>
+      <button type="button" class="btn btn-primary" [disabled]="!isFormValid()">Edit Book</button>
+      <button type="button" class="btn btn-danger" (click)="closeForm()">Close</button>
+    </div>
   </form>
 </div>
