--- a/src/app/feature-models/books/components/book-edit/book-edit.component.html
+++ b/src/app/feature-models/books/components/book-edit/book-edit.component.html
@@ -1,1 +1,7 @@
-<p>book-edit works!</p>
+<div class="container">
+    <app-book-form
+        [book]="book"
+        (onSubmit)="updateBook($event)"
+        (onEmitValues)="emitValues($event)"
+    ></app-book-form>
+</div>
