--- a/src/app/feature-models/books/components/book-details/book-details.component.scss
+++ b/src/app/feature-models/books/components/book-details/book-details.component.scss
@@ -75,3 +75,11 @@ button{
     color-stop(1, rgba(255, 255, 255, 100)));
 }
 
+.modal_header{
+    margin-top: 15px;
+    text-align: center;
+}
+
+.modal_body{
+    margin-bottom: 15px;
+}
