Added the loading screen. Added wishlist, shopping cart components and services. Added model for the shopping cart

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="nav nav_body">
     <div class="nav_left">
       <a routerLink="/books">
-        <i class="fa-solid fa fa-book book_icon"></i>
+        <i class="fa-solid fa fa-book book_icon"> Treat YoShelves</i>
       </a>
     </div>
     <div class="nav nav_search_bar">
