--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,13 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+body{
+    position: relative;
+}
+
+body::after{
+    content: '';
+    display: block;
+    height: 150px;
+}
