--- a/src/app/feature-models/books/components/book-details/book-details.component.scss
+++ b/src/app/feature-models/books/components/book-details/book-details.component.scss
@@ -83,3 +83,17 @@ button{
 .modal_body{
     margin-bottom: 15px;
 }
+
+.spinner-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    background: rgba(161, 161, 196, 0.47);
+    z-index: 998;
+  }
+  
