--- a/src/app/feature-models/books/components/books-list/books-list.component.html
+++ b/src/app/feature-models/books/components/books-list/books-list.component.html
@@ -1,3 +1,8 @@
+<div class="spinner-wrapper" *ngIf="isLoadingData$ | async">
+  <app-book-loader></app-book-loader>
+</div>
+
+
 <div class="books_list_body">
   <div class="books_list_filters">
     <!-- <ng-template> -->
