--- a/src/app/feature-models/books/components/books-list/books-list.component.scss
+++ b/src/app/feature-models/books/components/books-list/books-list.component.scss
@@ -80,3 +80,16 @@
     color:rgb(44, 100, 187);
   }
 }
+
+.spinner-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background: rgba(161, 161, 196, 0.47);
+  z-index: 998;
+}
