--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -14,7 +14,9 @@
     <div class="nav nav_right">
       <i class="fas fa fa-user user_icon"></i>
       <i class="fas fa fa-star star_icon"></i>
-      <i class="fas fa fa-shopping-cart cart_icon"></i>
+      <a routerLink="/shoppingcart">
+        <i class="fas fa fa-shopping-cart cart_icon"></i>
+      </a>
     </div>
   </div>
 </nav>
