Added popover service

--- a/src/app/feature-models/books/services/popover-services/components/book-cart-popover/book-cart-popover.component.html
+++ b/src/app/feature-models/books/services/popover-services/components/book-cart-popover/book-cart-popover.component.html
@@ -1,1 +1,16 @@
-<p>book-cart-popover works!</p>
+<div class="products-container">
+    <div class="products-img">
+        <img [src]="book.imageUrl" alt="">
+    </div>
+    <a class="products-url" routerLink="{{book.productId}}">
+        <div class="products-detail">
+            <div class="product-detail-author">{{book.author}}</div>
+            <div class="product-detail-title">{{book.title}}</div>
+            <div class="product-detail-quantity"><strong>Quanity:</strong> {{book.quantity}} </div>
+            <div class="product-detail-price">{{book.price}}</div>
+        </div>
+    </a>
+    <div class="delete" (click)="emitBook()">
+        <b>X</b>
+    </div>
+</div>
