--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="nav nav_body">
     <div class="nav_left">
       <a routerLink="/books">
-        <i class="fa-solid fa fa-book book_icon"> Treat YoShelves</i>
+        <i class="fa-solid fa fa-book book_icon">Treat YoShelves</i>
       </a>
     </div>
     <div class="nav nav_search_bar">
@@ -14,7 +14,7 @@
     <div class="nav nav_right">
       <i class="fas fa fa-user user_icon"></i>
       <i class="fas fa fa-star star_icon"></i>
-      <a routerLink="/shoppingcart">
+      <a routerLink="/shoppingcart/shoppingcart">
         <i class="fas fa fa-shopping-cart cart_icon"></i>
       </a>
     </div>
